<resources>
    <string name="app_name">ResQMe</string>
    <string name="slogan">Health empowers you.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="firstAidTips">First Aid Tips</string>
    <string name="major">Major</string>
    <string name="ashtma">Asthma Attack</string>
    <string name="bleeding">Bleeding</string>
    <string name="bones_and_muscles">Bones and Muscles</string>
    <string name="burns">Burns</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="choking">Choking</string>
    <string name="drowning">Drowning</string>
    <string name="headInjury">Head Injury</string>
    <string name="poisoning">Poisoning</string>
    <string name="resuscitation">Resuscitation</string>
    <string name="seizure">Seizure</string>
    <string name="stroke">Stroke</string>
    <string name="minor">Minor</string>
    <string name="allergic_reaction">Allergic Reaction</string>
    <string name="cold">Cold</string>
    <string name="diabetes">Diabetes</string>
    <string name="faint">Faint</string>
    <string name="heat">Heat</string>
    <string name="hyperventilation">Hyperventilation</string>
    <string name="bites_Stings">Bites and Stings</string>
    <string name="disasters">Disasters</string>
    <string name="earth_quakes">Earth Quakes</string>
    <string name="land_slides">Land Slides</string>
    <string name="floods">Floods</string>
    <string name="tsunami">Tsunami</string>
    <string name="cyclones">Cyclones</string>
    <string name="fire">Fire</string>
    <string name="techniques">Techniques</string>
    <string name="assessing_the_situation">Assessing the Situation</string>
    <string name="treat_shock">Treat Shock</string>
    <string name="hygine">Hygine</string>
    <string name="using_an_aed">Using an AED</string>
    <string name="opening_airWays">Opening Airways</string>
    <string name="recovery_position">Recovery Position</string>
    <string name="helplineNumber">Helpline Number</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="during">During</string>
    <string name="earth_after">\n• Do not enter damaged buildings. \n• If trapped in rubble: \n— Do not light a matchstick. \n— Cover your mouth with a cloth. \n— Tap on a pipe or a wall. \n— Sound a whistle. \n— Shout only as a last resort. This will help you conserve energy. \n• Use stairs and not lifts or elevators. \n• Move cautiously, and check for unstable objects and other hazards above and around you. Check yourself for injuries. \n• Anticipate aftershocks, especially after a major earthquake. \n• Stay away from beaches. Tsunamis and seiches sometimes hit after the ground has stopped shaking. \n• Do not spread and/ or believe in rumours. \n• Leave a message stating where you are going if you must evacuate your house. \n• Do not drive around the damaged areas as rescue and relief operations need roads for mobility. \n• Do not attempt to cross bridges/flyovers, which may have been damaged.</string>
    <string name="earth_during">\n• Stay calm. Do Not Panic. If you’re indoors, stay inside. If you’re outside, stay outside. \n• Don’t use matches, candles, or any flame. Broken gas lines and fire don’t mix. \n• If you’re in a car, stop the car and stay inside until the earthquake stops.\n• Drop under a table; Cover your head withone hand and Hold the table till the tremorslast.\n• Stay away from mirrors and windows. Donot exit the building while the earth is stillshaking.\n• Move outside as soon as the tremors stop.Do not use a lift.\n• When outside, move away from buildings,trees, walls and poles/electric lines.\n• When inside a vehicle, pull over in an openplace and remain inside; avoid bridges.\n• When in a structurally safe building, stayinside until shaking stops.\n• Protect yourself by staying in the corner/under a strong table or bed/ an inside wallaway from mirrors and windows.\n• If near an exit, leave the building as soon aspossible.\n• If inside an old and weak structure, takethe fastest and safest way out.</string>
    <string name="earth_before">• Consult a structural engineer to make your house earthquake resilient.\n• Know your seismic zone and carry out necessary structural changes in your house.\n• Preserve the design and layout drawings of your house for future reference.\n• Repair deep plaster cracks on walls and ceilings.\n• Fasten shelves securely to walls; place heavy / large objects on lower shelves. Provide strong support to power and gas appliances.\n• Prepare an emergency kit with essential tems for safety and survival.\n• Develop an emergency communication and evacuation plan for your family.\n• Learn the technique of ‘Drop-Cover-Hold’.\n• Avoid flood plains and filled-up areas for construction as far as possible.\n• Educate yourself and family members about earthquake risk.</string>
    <string name="fire_head1">Preparedness</string>
    <string name="fire_head2">In case of fire</string>
    <string name="fire_head3">If you are trapped by a fire</string>
    <string name="fire_head4">In case you hear a alarm</string>
    <string name="fire_des1">\n•  Prepare and practice a response plan for residential and office complexes. \n•  Regularly carry out and practice fire rescue drills such as stop, drop, and roll. \n•  Ensure that all residents/visitors are periodically trained to face different emergency situations and provide first aid. \n•  Ensure that smoke alarms are fitted in buildings and are functional. \n•  Try to make your residential building, office premises, etc. ‘No Smoking’ zones. If you absolutely need to, create a separate smoking area. \n•  Be familiar with the exit routes. \n•  Keep the exit routes /staircases free of any obstructions. Periodically check evacuation routes for obstruction, if any. \n•  Ensure that there is enough open area and wide roads available in and around your home and office premises to ensure easy access and movement of emergency vehicles. \n•  Ensure that exit routes are marked and fire fighting equipment is working properly in your office premises and residential area. \n•  Ensure that your house and office premises have a first aid kit placed at every segment. \n•  Do not leave any open fire unattended. \n•  Do not accumulate old newspapers or combustible materials in your house. \n•  Do not burn waste, dry leaves or vegetation. Always dispose of through appropriate municipal channels. \n•  Do not store flammable liquids in the house. \n•  Always keep matches and lighters locked away from children. \n•  Do not keep papers, clothes and flammable liquids near heaters/stoves/open chulhas. \n•  Keep LPG gas stoves on a raised platform; do not keep them on the floor. \n•  Turn off the gas cylinder valve and knob of the gas stove after cooking. \n•  Don’t throw matches, cigarette butts, etc. in waste baskets. \n•  Don’t place oil lamps, agarbattis or candles on wooden floor or near combustible material. \n•  Don’t wear loose, flowing and synthetic clothes while cooking.</string>
    <string name="flood_head1">Before</string>
    <string name="flood_text1">\n• Ignore rumours, Stay calm, Don’t panic.\n• Keep your mobile phones charged for emergency communication; use SMS.\n• Listen to radio, watch TV, read newspapers for weather updates.\n• Keep cattle/animals untied to ensure their safety.\n• Prepare an emergency kit with essential items for safety and survival.\n• Keep your documents and valuables in water-proof bags.\n• Know the safe routes to nearest shelter/raised pucca house.\n• Evacuate immediately to safe places when directed by government officials.\n• Store enough ready-to-eat food and water for at least a week.\n• Be aware of flash flood areas such as canals, streams, drainage channels.</string>
    <string name="flood_head2">During</string>
    <string name="flood_text2">\n• Don’t enter floodwaters. In case you need to wear suitable footwear. \n• Stay away from sewerage lines, gutters, drains, culverts, etc. \n• Stay away from electric poles and fallen power lines to avoid electrocution. \n• Mark any open drains or manholes with visible signs (red flags or barricades). \n• Do not walk or drive in the flood waters. Remember, two feet of moving flood water can wash away big cars as well. \n• Eat freshly cooked or dry food. Keep your food covered. \n• Drink boiled/chlorinated water. \n• Use disinfectants to keep your surroundings clean.</string>
    <string name="flood_head3">After</string>
    <string name="flood_text3">\n• Do not allow children to play in or near flood waters. \n• Don’t use any damaged electrical goods, get them checked. \n• If instructed, turn off utilities at main switches and unplug appliances - do not touch electrical equipment if wet. \n• Watch out for broken electric poles and wires, sharp objects and debris. \n• Do not eat food that has been in flood waters. \n• Use mosquito nets to prevent malaria. \n• Be careful of snakes as snake bites are common during floods. \n• Don’t use the toilet or tap water if the water lines/sewage pipes are damaged. \n• Do not drink tap water until advised by the Health Department that the water is safe to drink.</string>
    <string name="flood_head4">If you need to evacuate</string>
    <string name="flood_text4">\n• Raise furniture, appliances on beds and tables. \n• Put sandbags in the toilet bowl and cover all drain holes to prevent sewage backflow. \n• Turn off power and gas connection. \n• Move to a higher ground/ safe shelter. \n• Take the emergency kit, first aid box, valuables and important documents with you. \n• Do not enter deep, unknown waters; use a stick to check water depth. \n• Come back home only when officials ask you to do so. \n• Make a family communications plan. \n• Clean and disinfect everything that got wet.</string>
    <string name="landslide_head1">Before</string>
    <string name="landslide_text1">\n• Grow more trees/vegetation as it can hold the soil together. \n• Listen to radio/Watch TV/Read newspaper for any alerts. \n• Keep drains clean, weep holes open. Do not change the natural drainage system. \n• Do not place debris, waste or fill material on a steep slope. \n• Watch out for any warning signs such as subsidence of building, cracks on rocks, muddy river water. \n• Do not construct near steep slopes and drainage path. \n• Store emergency supplies of food and water, flashlights, batteries and medicine ready. \n• Keep a ‘disaster kit’ with essential identity documents ready.</string>
    <string name="landslide_head2">During</string>
    <string name="landslide_text2"> \n• Ignore rumours. Stay calm. Don’t panic. \n• Stay together with your companions. \n• Landslide debris moves from uphill to downhill. You should, therefore, avoid low- lying areas or valleys. \n• If you notice any warning signs such as unusual sounds like trees cracking or boulders knocking together, \n• Move away from landslip path or downstream valley quickly; \n• Inform nearest Tehsil/ District HQ/ Disaster Management Helpline.</string>
    <string name="landslide_head3">After</string>
    <string name="landslide_text3"> \n• Do not touch/walk over loose material and electrical wires or poles. \n• Move away from landslip path and downstream valley quickly. \n• Check for injured and trapped persons. \n• Do not move an injured person without rendering first aid unless he/she is in immediate danger. \n• Do not drink contaminated water directly from rivers springs, wells, etc. \n• Locate the nearest public shelter. \n• Stay away from the slide area. There may be a danger of additional slides. \n• Re-plant damaged ground as soon as possible. Erosion caused by loss of ground cover can lead to flash flooding.</string>
    <string name="tsunami_head1">Before</string>
</resources>