<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:background="@drawable/gredient_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Disasters">

    <ScrollView
        android:id="@+id/scr_disaster"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/in_src_disaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/top_container_disaster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/artical_img_bg"
                android:orientation="vertical"

                android:outlineAmbientShadowColor="@color/light_gray"
                android:outlineSpotShadowColor="#4966B1"
                android:translationZ="80dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="210dp"

                        android:layout_margin="8dp"
                        android:background="@color/broadcastbg"
                        app:cardBackgroundColor="@color/broadcastbg"
                        app:cardCornerRadius="15dip"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <ImageView
                            android:id="@+id/imageDis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:transitionName="d"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_earthquackes" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/headtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/bold_e"
                        android:text="notLoaded"
                        android:textColor="@color/text_primary"
                        android:textSize="22dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/con_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:outlineAmbientShadowColor="@color/light_gray"
                android:outlineSpotShadowColor="#4966B1"
                android:translationZ="65dp"
                android:background="@drawable/bg_dec"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/oneHeadTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/before"
                    android:textColor="@color/Primary_box"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/oneDesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/regular_e"
                    android:text="@string/earth_before"
                    android:textColor="@color/text_primary"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/con_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:outlineAmbientShadowColor="@color/light_gray"
                android:outlineSpotShadowColor="#4966B1"
                android:translationZ="65dp"
                android:background="@drawable/bg_dec"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/twoHeadTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/during"
                    android:textColor="@color/Primary_box"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/twoDesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/regular_e"
                    android:text="@string/earth_during"
                    android:textColor="@color/text_primary"
                    android:textSize="20dp" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/con_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:outlineAmbientShadowColor="@color/light_gray"
                android:outlineSpotShadowColor="#4966B1"
                android:translationZ="65dp"
                android:background="@drawable/bg_dec"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/threeHeadTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/after"
                    android:textColor="@color/Primary_box"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/threeDesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/regular_e"
                    android:text="@string/earth_after"
                    android:textColor="@color/text_primary"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/con_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:outlineAmbientShadowColor="@color/light_gray"
                android:outlineSpotShadowColor="#4966B1"
                android:translationZ="65dp"
                android:background="@drawable/bg_dec"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/fourHeadTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/before"
                    android:textColor="@color/Primary_box"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/fourDesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/regular_e"
                    android:text="@string/earth_before"
                    android:textColor="@color/text_primary"
                    android:textSize="20dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:translationZ="100dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/weblinkBg"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_arc_bg"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/meduim"
                        android:text="Call Disaster Helpline"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp" />
                </LinearLayout>



            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>